fixed user profile card not fitting screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -183,7 +183,7 @@
 }
 
 .cl-userProfile-root .cl-card {
-  @apply max-w-[600px] justify-center;
+  @apply justify-center;
 }
 
 @keyframes breathe {
